--- a/L04_Camera02/Project.vcxproj
+++ b/L04_Camera02/Project.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="..\Library\tinygltf\tiny_gltf.h" />
     <ClInclude Include="Src\Application\GameObject\Camera\CameraBase.h" />
     <ClInclude Include="Src\Application\GameObject\Camera\FPSCamera\FPSCamera.h" />
+    <ClInclude Include="Src\Application\GameObject\Camera\TPSCamera\TPSCamera.h" />
     <ClInclude Include="Src\Application\GameObject\Camera\TrakingCamera\TrackingCamera.h" />
     <ClInclude Include="Src\Application\GameObject\Character\Character.h" />
     <ClInclude Include="Src\Application\GameObject\Terrain\Terrain.h" />
@@ -191,6 +192,7 @@
   <ItemGroup>
     <ClCompile Include="Src\Application\GameObject\Camera\CameraBase.cpp" />
     <ClCompile Include="Src\Application\GameObject\Camera\FPSCamera\FPSCamera.cpp" />
+    <ClCompile Include="Src\Application\GameObject\Camera\TPSCamera\TPSCamera.cpp" />
     <ClCompile Include="Src\Application\GameObject\Camera\TrakingCamera\TrackingCamera.cpp" />
     <ClCompile Include="Src\Application\GameObject\Character\Character.cpp" />
     <ClCompile Include="Src\Application\GameObject\Terrain\Terrain.cpp" />
